--- a/css/styles.css
+++ b/css/styles.css
@@ -5,7 +5,7 @@
   background-color: rgb(254, 254, 93);
   font-size: medium;
   margin: auto;
-
+  font-style: sans-serif;
 }
 
 .about-me{
@@ -14,8 +14,16 @@
 ul.projects{
   float: left;
   text-align: left;
+  font-size: large;
+  font-style: serif;
 }
 
 .bold{
-  
+
+}
+.img{
+  height: 25%;
+  width: 25%;
+  object-fit: contain;
+  object-position: 50% 50%;
 }
