--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,15 @@
 .about-me{
-  border: 50px rebeccapurple;
-  padding: 10px;
   text-align: center;
+  
+  border: 10px purple;
+  border-style: groove;
+  border-radius: 10px;
+  padding: 10px;
+  background-color: aqua;
   display: block;
   margin: auto;
   float: center;
-  background-color: rgb(103, 208, 128);
   font-size: large;
-  margin: auto;
   margin-top: 40px;
   margin-bottom: 40px;
   font-style: sans-serif;
@@ -21,13 +23,15 @@
   border: 10px;
   border: 20px aquamarine;
 }
+
 ol.projects{
   float: left;
   text-align: left;
   font-size: large;
   font-style: serif;
   background-color: indianred;
-  width: 50%;
+  width: 30%;
+  height: auto;
   margin: auto;
 }
 
@@ -35,12 +39,25 @@ ol.projects{
   font-size: larger;
 
 }
+
 .img{
   height: 25%;
   width: 25%;
   object-fit: contain;
   object-position: 50% 50%;
 }
+
 .fun {
   font-style: italic;
+}
+
+.hobbies {
+  float: left;
+}
+
+.h1{
+  font-size: xx-large;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  border: 4px indigo;
+
 }
