--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 .page{
   background-color: lightpink;
-  height: auto;
-  width: auto;
+  width: 100%;
+  margin: auto;
 }
 .about-me{
   text-align: center;
@@ -23,7 +23,7 @@
 }
 
 h2.all{
-  padding-left: 33%;
+  padding-left: 37%;
   background-color: rgb(127, 151, 219);
   border: 3px rgb(123, 47, 9);
   margin: auto;
@@ -36,25 +36,37 @@ ol.projects{
   float: left;
   text-align: left;
   font-size: large;
-  font-style: serif;
+  font-family: 'Gill Sans';
   background-color: indianred;
-  width: 100%;
+  width: 96%;
   margin: auto;
-  border:4px yellowgreen;
-  border-radius: 4px;
+  border:4px rgba(76, 71, 212, 0.9);
   border-style: ridge;
 }
 
-.hobbies {
-  float: left;
-  border: 5px yellowgreen;
-  background-color: fuchsia;
+h3.hobbies {
+  float: center;
+  border: 2px rgb(110, 5, 5);
+  background-color: rgb(179, 215, 121);
   padding: 4px;
   width: 100%;
   margin: auto;
-  border-style: border-box;
+  border-style: solid;
+  font-size: x-large;
+  font-family: 'Trebuchet MS';
 }
-.bold { 
+
+.hobbies {
+  float: center;
+  background-color: lightskyblue;
+  border: 4px green;
+  border-style: dashed;
+  box-sizing: border-box;
+  width: 100%;
+  margin: auto;
+}
+
+.bold {
   font-size: larger;
 
 }
@@ -73,5 +85,5 @@ ol.projects{
 
 h1.sauce {
   font-size: xx-large;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  font-family: 'Franklin Gothic Medium';
 }
