--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@
   font-size: large;
   margin-top: 4px;
   margin-bottom: 4px;
-  font-style: sans-serif;
+  font-style: 'Gothic';
   box-sizing: border-box;
   width: 75%;
 }
@@ -38,7 +38,7 @@ ol.projects{
   font-size: large;
   font-family: 'Gill Sans';
   background-color: indianred;
-  width: 96%;
+  width: 97.25%;
   margin: auto;
   border:4px rgba(76, 71, 212, 0.9);
   border-style: ridge;
@@ -46,23 +46,22 @@ ol.projects{
 
 h3.hobbies {
   float: center;
-  border: 2px rgb(110, 5, 5);
   background-color: rgb(179, 215, 121);
   padding: 4px;
   width: 100%;
   margin: auto;
-  border-style: solid;
+  border-style: outset;
   font-size: x-large;
   font-family: 'Trebuchet MS';
 }
 
 .hobbies {
-  float: center;
+  float: right;
   background-color: lightskyblue;
   border: 4px green;
   border-style: dashed;
   box-sizing: border-box;
-  width: 100%;
+  width: 51%;
   margin: auto;
 }
 
@@ -76,6 +75,8 @@ h3.hobbies {
   width: 25%;
   object-fit: contain;
   object-position: 50% 50%;
+  border: 5px black;
+  border-top-style: outset;
 }
 
 .fun {
@@ -86,4 +87,12 @@ h3.hobbies {
 h1.sauce {
   font-size: xx-large;
   font-family: 'Franklin Gothic Medium';
+}
+
+.background {
+  float: left;
+  border-style: solid;
+  width: 49%;
+  margin: auto;
+  background-color: rgba(255, 217, 0, 0.596);
 }
