--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,7 @@ h3.hobbies {
   width: 100%;
   margin: auto;
   border-style: outset;
-  font-size: x-large;
+  font-size: xx-large;
   font-family: 'Trebuchet MS';
 }
 
@@ -61,6 +61,7 @@ h3.hobbies {
   border: 4px green;
   border-style: dashed;
   box-sizing: border-box;
+  height: auto;
   width: 51%;
   margin: auto;
 }
@@ -91,8 +92,17 @@ h1.sauce {
 
 .background {
   float: left;
-  border-style: solid;
+  border:2px;
   width: 49%;
   margin: auto;
   background-color: rgba(255, 217, 0, 0.596);
+  height: auto;
+  font-family: 'Franklin Gothic Medium';
+}
+
+ul.hobbies{
+  font-size: xx-large;
+  height: 250px;
+  float: left;
+  border-style: none;
 }
